--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
     </head>
 
     <body>
+        <!-- Topnav -->
         <header class="container-fluid fixed-top">
             <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-flex">
@@ -75,6 +76,7 @@
                 </div>
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                        <!-- Account -->
                         <li class="list-inline-item dropdown">
                             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
@@ -103,11 +105,12 @@
                                 {% endif %}
                             </div>
                         </li>
+                        <!-- Cart -->
                         <li class="list-inline-item">
                             <a class="{% if grand_total %}font-weight-bold{% else %}text-black{% endif %} nav-link"
                                 href="{% url 'view_cart' %}" id="shopping-cart-link">
                                 <div class="text-center">
-                                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                    <div><i class="fas fa-shopping-cart fa-lg"></i></div>
                                     <p class="my-0">
                                         {% if grand_total %}
                                             €{{ grand_total|floatformat:2 }}
@@ -121,6 +124,7 @@
                     </ul>
                 </div>
             </div>
+            <!-- Nav Menu -->
             <div class="row bg-white">
                 <nav class="navbar navbar-expand-lg navbar-light w-100">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -133,6 +137,7 @@
             </div>
         </header>
 
+        <!-- Messages -->
         {% if messages %}
         <div class="message-container">
             {% for message in messages %}
