--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,3 +1,4 @@
+<!-- Success Toast -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
@@ -7,6 +8,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    <!-- Message -->
     <div class="toast-body bg-white">
         <div class="row">
             <div class="col">
@@ -14,9 +16,11 @@
                 <hr class="mt-1 mb-3">
             </div>
         </div>
+        <!-- Cart Info -->
         {% if grand_total and not on_profile_page %}
             <p class="logo-font bg-white text-black py-1">Your Cart ({{ product_count }})</p>
             <div class="cart-notification-wrapper">
+                <!-- Cart Items -->
                 {% for item in cart_items %}
                     <div class="row">
                         <div class="col-3 my-1">
@@ -34,6 +38,7 @@
                 {% endfor %}
             </div>
             <div class="row">
+                <!-- Delivery -->
                 <div class="col">
                     <strong><p class="mt-3 mb-1 text-black">
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
