--- a/products/templates/products/artist_detail.html
+++ b/products/templates/products/artist_detail.html
@@ -130,4 +130,15 @@
             </div>
         </div>
     </div>
+    <!-- Back to Top Button -->
+    <div class="btt-button shadow-sm">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>	
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script src="{% static 'js/scroll_to_top.js' %}"></script>
 {% endblock %}
