--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -31,7 +31,7 @@
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black text-uppercase float-right">Update Information</button>
+                    <button class="btn btn-black text-uppercase float-right mb-4">Update Information</button>
                 </form>
             </div>
             <!-- Order History -->
