--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,11 +1,11 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <!-- Home -->
-        <li class="">
+        <li class="nav-menu-item">
             <a href="{% url 'home' %}" class="nav-link font-weight-bold mr-5">Home</a>
         </li>
         <!-- Albums -->
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown nav-menu-item">
             <a class="font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Albums
             </a>
@@ -18,8 +18,8 @@
             </div>
         </li>
         <!-- Artists -->
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown nav-menu-item">
+            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Artists
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="artists-link">
@@ -28,8 +28,8 @@
             </div>
         </li>
         <!-- Special Offers -->
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown nav-menu-item">
+            <a class="logo-font font-weight-bold nav-link" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
