--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -30,13 +30,12 @@
         <div class="row dark-background-light-text-area">
             <div class="col">
                 {% if cart_items %}
-                    <div class="table-responsive rounded">
+                    <div class="table-responsive rounded text-center">
                         <table class="table table-sm table-borderless">
-                            <thead class="text-black">
+                            <thead class="text-black text-justify text-center">
                                 <tr>
                                     <th scope="col">Product Info</th>
-                                    <th scope="col"></th>
-                                    <th scope="col">Price</th>
+                                    <th scope="col" class="d-none d-sm-table-cell">Price</th>
                                     <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
                                 </tr>
@@ -50,11 +49,15 @@
                                         {% else %}
                                             <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.album.name }}">
                                         {% endif %}
+                                        <p class="my-2 text-break"><strong>{{ item.album.name }}</strong></p>
+                                        {% if item.album.special_offer_price %}
+                                            <small class="mt-2 text-muted"><s>€{{ item.album.price }}</s></small>
+                                            <p class="my-0 font-weight-bold">€{{ item.album.special_offer_price }}</p>
+                                        {% else %}
+                                            <p class="mt-2 d-xs-inline d-sm-none">€{{ item.album.price }}</p>
+                                        {% endif %}
                                     </td>
-                                    <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.album.name }}</strong></p>
-                                    </td>
-                                    <td class="py-3">
+                                    <td class="py-3 d-none d-sm-table-cell">
                                         {% if item.album.special_offer_price %}
                                             <small class="my-0 text-muted"><s>€{{ item.album.price }}</s></small>
                                             <p class="my-0 font-weight-bold">€{{ item.album.special_offer_price }}</p>
@@ -62,12 +65,12 @@
                                             <p class="my-0">€{{ item.album.price }}</p>
                                         {% endif %}
                                     </td>
-                                    <td class="py-3 w-25">
+                                    <td class="py-3 w-25" >
                                         <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <div class="input-group">
-                                                    <div class="input-group-prepend">
+                                                    <div class="input-group-prepend d-none d-sm-block">
                                                         <button class="decrement-qty btn btn-sm btn-black round-button" 
                                                             data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                             <span>
@@ -79,7 +82,7 @@
                                                         name="quantity" value="{{ item.quantity }}" min="1" max="99"
                                                         data-item_id="{{ item.item_id }}"
                                                         id="id_qty_{{ item.item_id }}">
-                                                    <div class="input-group-append">
+                                                    <div class="input-group-append d-none d-sm-block">
                                                         <button class="increment-qty btn btn-sm btn-black round-button"
                                                             data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                             <span>
@@ -90,8 +93,8 @@
                                                 </div>
                                             </div>
                                         </form>
-                                        <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                                        <a class="update-link text-center text-info float-sm-left col-xs-12 p-0"><small>Update</small></a>
+                                        <a class="remove-item text-danger text-center float-sm-right col-xs-12 p-0" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                                     </td>
                                     <td class="py-3">
                                         {% if item.album.special_offer_price %}
@@ -116,13 +119,13 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'albums' %}" class="btn btn-outline-black btn-lg round-button">
+                                    <a href="{% url 'albums' %}" class="btn btn-outline-black btn-lg round-button mb-1">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
                                         </span>
                                         <span class="text-uppercase">Keep Shopping</span>
                                     </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black btn-lg round-button">
+                                    <a href="{% url 'checkout' %}" class="btn btn-black btn-lg round-button mb-1">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
