--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -43,7 +43,7 @@
                             <tr>
                                 <th>Order Number</th>
                                 <th>Date</th>
-                                <th>Items</th>
+                                <th class="d-none d-sm-table-cell">Items</th>
                                 <th>Order Total</th>
                             </tr>
                         </thead>
@@ -57,7 +57,7 @@
                                         </a>
                                     </td>
                                     <td>{{ order.order_date }}</td>
-                                    <td>
+                                    <td class="d-none d-sm-table-cell">
                                         <ul class="list-unstyled">
                                             {% for item in order.lineitems.all %}
                                                 <li class="small">
