--- a/templates/base.html
+++ b/templates/base.html
@@ -59,12 +59,13 @@
                         <p class=" text-black my-auto logo-text float-left">Vinyl</p>
                     </a>
                 </div>
+                <!-- Search -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'albums' %}">
                         <div id="nav-search-bar" class="input-group w-100">
                             <input class="form-control rounded-0" type="text" name="q"
                                 placeholder="Search our site">
-                            <div class="input-group-append">
+                            <div class="input-group-append search-button">
                                 <button class="form-control btn btn-black rounded-0" type="submit">
                                     <span class="icon">
                                         <i class="fas fa-search"></i>
@@ -78,7 +79,7 @@
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                         <!-- Account -->
                         <li class="list-inline-item dropdown">
-                            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                            <a class="user-options text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 <div class="text-center">
                                     <div><i class="fas fa-user fa-lg"></i></div>
@@ -107,7 +108,7 @@
                         </li>
                         <!-- Cart -->
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            <a class="shopping-cart-link {% if grand_total %}font-weight-bold{% else %}text-black{% endif %} nav-link"
                                 href="{% url 'view_cart' %}" id="shopping-cart-link">
                                 <div class="text-center">
                                     <div><i class="fas fa-shopping-cart fa-lg"></i></div>
