--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -3,7 +3,7 @@
     <li class="list-inline-item">
         <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <div class="text-center">
+            <div class="text-center search-button">
                 <div><i class="fas fa-search fa-lg"></i></div>
                 <p class="my-0">Search</p>
             </div>
@@ -13,7 +13,7 @@
                 <div class="input-group w-100">
                     <input class="form-control border border-black rounded-0" type="text" name="q"
                         placeholder="Search our site">
-                    <div class="input-group-append">
+                    <div class="input-group-append search-button">
                         <button class="form-control form-control btn btn-black border border-black rounded-0"
                             type="submit">
                             <span class="icon">
@@ -27,7 +27,7 @@
     </li>
     <!-- Account -->
     <li class="list-inline-item dropdown">
-        <a class="nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+        <a class="user-options nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div><i class="fas fa-user fa-lg"></i></div>
@@ -57,10 +57,10 @@
     </li>
     <!-- Cart -->
     <li class="list-inline-item">
-        <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
+        <a class="shopping-cart-link {% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
             href="{% url 'view_cart' %}">
             <div class="text-center">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <div><i class="fas fa-shopping-cart fa-lg"></i></div>
                 <p class="my-0">
                     {% if grand_total %}
                         €{{ grand_total|floatformat:2 }}
