--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -63,7 +63,7 @@
                     </div>
                 {% endfor %}
                 <!-- Delivery and Total -->
-                <hr class="my-0">
+                <hr class="mt-2">
                 <div class="row text-black text-right">
                     <div class="col-8 col-sm-7 offset-sm-2">
                         <p class="my-0">Order Total:</p>
