--- a/products/templates/products/artist_detail.html
+++ b/products/templates/products/artist_detail.html
@@ -108,28 +108,50 @@
                     <!-- Horizontal Rules -->
                     {% if forloop.counter|divisibleby:1 %}
                         <div class="col-12 d-sm-none mb-5">
-                            <hr>
+                            <hr class="product-separator">
                         </div>
                     {% endif %}                        
                     {% if forloop.counter|divisibleby:2 %}
                         <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                            <hr>
+                            <hr class="product-separator">
                         </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:2 is False %}
+                        {% if forloop.counter == albums.count %}
+                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                                <hr class="product-separator">
+                            </div>
+                        {% endif %}
                     {% endif %}
                     {% if forloop.counter|divisibleby:3 %}
                         <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                            <hr>
+                            <hr class="product-separator">
                         </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:3 is False %}
+                        {% if forloop.counter == albums.count %}
+                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                                <hr class="product-separator">
+                            </div>
+                        {% endif %}
                     {% endif %}
                     {% if forloop.counter|divisibleby:4 %}
                         <div class="col-12 d-none d-xl-block mb-5">
-                            <hr>
+                            <hr class="product-separator">
                         </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:4 is False %}
+                        {% if forloop.counter == albums.count %}
+                            <div class="col-12 d-none d-xl-block mb-5">
+                                <hr class="product-separator">
+                            </div>
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
+    <hr>
     <!-- Back to Top Button -->
     <div class="btt-button shadow-sm">
         <a class="btt-link d-flex h-100">
