Added round buttons to cart and checkout success.

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -137,7 +137,7 @@
                     </div>
                 {% else %}
                     <p class="lead mb-5">Your cart is empty.</p>
-                    <a href="{% url 'albums' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                    <a href="{% url 'albums' %}" class="btn btn-outline-black round-button btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
