--- a/products/templates/products/artist_detail.html
+++ b/products/templates/products/artist_detail.html
@@ -76,7 +76,7 @@
                                 </div>
                             {% endif %}
                             <div class="card-body pb-0 pt-0">
-                                <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
+                                <i class="fa fa-music" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre|cut:' ' }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                             </div>
                             <div class="card-footer pt-0 border-0 text-left">
                                 <div class="row">
