--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,7 +6,7 @@
         </li>
         <!-- Albums -->
         <li class="nav-item dropdown nav-menu-item">
-            <a class="font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="font-weight-bold nav-link mr-5" href="#" id="albums-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Albums
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="albums-link">
@@ -19,7 +19,7 @@
         </li>
         <!-- Artists -->
         <li class="nav-item dropdown nav-menu-item">
-            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="artists-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Artists
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="artists-link">
